--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,87 @@
     transform: rotate(360deg);
   }
 }
+
+
+.button {
+  position: relative;
+  background-color: #04AA6D;
+  border: none;
+  border-radius: 10px;
+  font-size: 18px;
+  color: #FFFFFF;
+  padding: 20px;
+  width: fit-content;
+  height: 50px;
+  text-align: center;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  text-decoration: none;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.button:after {
+  content: "";
+  background: #90EE90;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px!important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s
+}
+
+.button:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
+}
+
+
+.button1 {
+  position: relative;
+  background-color: #04AA6D;
+  border: 2px;
+  border-radius: 10px;
+  font-size: 15px;
+  color: #FFFFFF;
+  padding: 15px;
+  margin: auto 2px auto auto;
+  width: fit-content;
+  height: fit-content;
+  text-align: center;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  text-decoration: none;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.button1:after {
+  content: "";
+  background: #90EE90;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px!important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s
+}
+
+.button1:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
+}
+
+
+#buttonhome{
+  margin-right: 5px;
+}
