--- a/src/App.css
+++ b/src/App.css
@@ -148,3 +148,12 @@
   text-align: left;
     /* margin-left: 50px;  */
     /* margin: 0 auto; */ 
+.footer{
+  position: absolute;
+  bottom: 0%;
+  width: 100%;
+  height: 50px;
+  background-color: black;
+  text-align:center;
+  color: white;
+}
